--- a/app/views/shared/_user_photo.html.erb
+++ b/app/views/shared/_user_photo.html.erb
@@ -40,8 +40,8 @@
 <% fallback_size_class = icon_background == :none ? size_class_map[size] : fallback_size_class_map[size] %>
 
 <% icon_background_class_map = {
-  default: 'bg-gradient-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-slate-800',
-  darker: 'bg-gradient-to-b from-slate-200 to-slate-300 dark:from-slate-600 dark:to-slate-700',
+  default: 'bg-linear-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-slate-800',
+  darker: 'bg-linear-to-b from-slate-200 to-slate-300 dark:from-slate-600 dark:to-slate-700',
   none: '',
 } %>
 
