--- a/app/views/teams/calendar/_event.html.erb
+++ b/app/views/teams/calendar/_event.html.erb
@@ -4,7 +4,7 @@
 
 <div id="<%= dom_id event %>" data-filter-events-target="event" data-event-status="<%= event.status %>" class="card flex flex-col <%= 'hidden' unless filter.in?([event.status, 'all']) %>">
   <div class="flex flex-wrap items-center gap-3 mb-4">
-    <%= image_tag event.photo.variant(resize_to_limit: [100, 100]).processed, class: 'size-12 rounded-lg shadow-lg dark:shadow-none object-cover' if event.photo.attached? %>
+    <%= image_tag event.photo.variant(resize_to_limit: [100, 100]).processed, class: 'size-12 rounded-lg not-dark:shadow-lg object-cover' if event.photo.attached? %>
 
     <div class="grow flex items-start justify-between">
       <div class="leading-tight">
