--- a/app/views/teams/calendar/_event_actions_dropdown.html.erb
+++ b/app/views/teams/calendar/_event_actions_dropdown.html.erb
@@ -10,7 +10,7 @@
   <button
     type="button"
     data-action="mousedown->dropdown#toggle"
-    class="z-0 p-1 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50"
+    class="z-0 p-1 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50"
   >
     <%= inline_svg_tag 'icons/ellipsis-vertical.svg', class: 'size-5.5 shrink-0 text-slate-700 dark:text-slate-300' %>
     <span class="sr-only">Actions</span>
