--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   </div>
 
-  <div data-controller="sort-table" class="relative overflow-x-auto border rounded-lg shadow-md dark:shadow-none border-slate-200 dark:border-slate-700">
+  <div data-controller="sort-table" class="relative overflow-x-auto border rounded-lg not-dark:shadow-md border-slate-200 dark:border-slate-700">
     <table data-sort-table-target="table" class="w-full overflow-x-auto text-sm text-left table-auto rtl:text-right text-soft row-numbers">
       <thead class="text-xs uppercase text-normal bg-slate-200/70 dark:bg-slate-700/70">
         <tr>
