--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -46,12 +46,12 @@
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
         <div>
           <%= settings_form.radio_button :theme, 'system', checked: (@user.settings(:appearance).theme == 'system'), data: { theme_target: 'input', action: 'theme#change',}, class: 'hidden peer' %>
-          <%= settings_form.label :theme_system, class: 'form-radio-card-label peer-checked:*:bg-indigo-100 dark:peer-checked:*:bg-indigo-900' do %>
+          <%= settings_form.label :theme_system, class: 'form-radio-card-label *:peer-checked:bg-indigo-100 dark:*:peer-checked:bg-indigo-900' do %>
             <div class="p-2 rounded-md bg-slate-200 dark:bg-slate-700 shrink-0">
               <%= inline_svg_tag 'icons/computer.svg', class: 'size-5 peer-checked:text-indigo-500' %>
             </div>
 
-            <div class="block !bg-transparent select-none">
+            <div class="block bg-transparent! select-none">
               <p class="w-full font-semibold">System default</p>
               <p class="w-full text-xs">Automatically adjusts based on device settings</p>
             </div>
@@ -60,12 +60,12 @@
 
         <div>
           <%= settings_form.radio_button :theme, 'light', checked: (@user.settings(:appearance).theme == 'light'), data: { theme_target: 'input', action: 'theme#change',}, class: 'hidden peer' %>
-          <%= settings_form.label :theme_light, class: 'form-radio-card-label peer-checked:*:bg-indigo-100 dark:peer-checked:*:bg-indigo-900' do %>
+          <%= settings_form.label :theme_light, class: 'form-radio-card-label *:peer-checked:bg-indigo-100 dark:*:peer-checked:bg-indigo-900' do %>
             <div class="p-2 rounded-md bg-slate-200 dark:bg-slate-700 shrink-0">
               <%= inline_svg_tag 'icons/sun.svg', class: 'size-5 peer-checked:text-indigo-500' %>
             </div>
 
-            <div class="block !bg-transparent select-none">
+            <div class="block bg-transparent! select-none">
               <p class="w-full font-semibold">Light mode</p>
               <p class="w-full text-xs">Clean, bright interface for well-lit environments</p>
             </div>
@@ -74,12 +74,12 @@
 
         <div>
           <%= settings_form.radio_button :theme, 'dark', checked: (@user.settings(:appearance).theme == 'dark'), data: { theme_target: 'input', action: 'theme#change',}, class: 'hidden peer' %>
-          <%= settings_form.label :theme_dark, class: 'form-radio-card-label peer-checked:*:bg-indigo-100 dark:peer-checked:*:bg-indigo-900' do %>
+          <%= settings_form.label :theme_dark, class: 'form-radio-card-label *:peer-checked:bg-indigo-100 dark:*:peer-checked:bg-indigo-900' do %>
             <div class="p-2 rounded-md bg-slate-200 dark:bg-slate-700 shrink-0">
               <%= inline_svg_tag 'icons/moon.svg', class: 'size-5 peer-checked:text-indigo-500' %>
             </div>
 
-            <div class="block !bg-transparent select-none">
+            <div class="block bg-transparent! select-none">
               <p class="w-full font-semibold">Dark mode</p>
               <p class="w-full text-xs">Easy on the eyes in low-light environments</p>
             </div>
