--- a/app/assets/stylesheets/custom/custom.css
+++ b/app/assets/stylesheets/custom/custom.css
@@ -1,4 +1,6 @@
 @import './animations.css';
 @import './buttons.css';
+@import './components.css';
 @import './forms.css';
 @import './navigation.css';
+@import './text.css';
