--- a/app/views/devise/_auth_layout.html.erb
+++ b/app/views/devise/_auth_layout.html.erb
@@ -4,7 +4,7 @@
       <%= yield :masthead %>
     </div>
 
-    <div class="bg-slate-100/50 dark:bg-slate-800/50 dark:border-slate-700/80 shadow-sm rounded-xl p-8 border border-slate-300/60">
+    <div class="bg-slate-100/50 dark:bg-slate-800/50 dark:border-slate-700/80 shadow-xs rounded-xl p-8 border border-slate-300/60">
       <%= yield %>
     </div>
 
