--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -4,7 +4,7 @@
 <% omniauth_check = devise_mapping.omniauthable? && controller_name != 'passwords' %>
 
 <%- if forgot_password_check || confirmation_instructions_check || unlock_instructions_check || omniauth_check %>
-  <div class="mt-4 space-y-4 text-center">
+  <div class="mt-4 flex flex-col gap-y-4 text-center">
     <%= link_to 'Forgot password?', new_password_path(resource_name), class: 'btn-link text-sm' if forgot_password_check %>
 
     <%= link_to 'Didn\'t receive confirmation instructions?', new_confirmation_path(resource_name), class: 'btn-link text-sm' if confirmation_instructions_check %>
@@ -12,11 +12,11 @@
     <%= link_to 'Didn\'t receive unlock instructions?', new_unlock_path(resource_name), class: 'btn-link text-sm' if unlock_instructions_check %>
 
     <div class="flex items-center">
-      <hr class="flex-grow border-t dark:border-slate-700">
+      <hr class="grow border-t dark:border-slate-700">
       <span class="px-3 text-soft text-sm">
         OR
       </span>
-      <hr class="flex-grow border-t dark:border-slate-700">
+      <hr class="grow border-t dark:border-slate-700">
     </div>
 
     <%- if omniauth_check %>
