--- a/app/views/messages/_messages_list.html.erb
+++ b/app/views/messages/_messages_list.html.erb
@@ -5,9 +5,9 @@
   <% @objects.each do |object| %>
     <% if !unread_banner_shown && current_user.last_read_at(topic)&.before?(object.created_at) %>
       <div id="unread_banner" class="flex items-center my-6 font-semibold">
-        <hr class="flex-grow border-t-[0.5px] border-indigo-600 dark:border-indigo-500">
+        <hr class="grow border-t-[0.5px] border-indigo-600 dark:border-indigo-500">
         <span class="px-3 text-indigo-600 dark:text-indigo-500 text-sm">Unread messages</span>
-        <hr class="flex-grow border-t-[0.5px] border-indigo-600 dark:border-indigo-500">
+        <hr class="grow border-t-[0.5px] border-indigo-600 dark:border-indigo-500">
       </div>
 
       <% unread_banner_shown = true %>
@@ -15,11 +15,11 @@
 
     <% if last_message_date != object.created_at.to_date %>
       <div class="flex items-center my-6 font-semibold" data-date="<%= object.created_at.to_date %>">
-        <hr class="flex-grow border-t-[0.5px] border-slate-400 dark:border-slate-600">
+        <hr class="grow border-t-[0.5px] border-slate-400 dark:border-slate-600">
         <span class="px-3 text-light text-sm">
           <%= pretty_date(object.created_at, date_style: :relative, include_weekday: true, weekday_format: :short, month_format: :short, include_year: object.created_at.year != Time.current.year) %>
         </span>
-        <hr class="flex-grow border-t-[0.5px] border-slate-400 dark:border-slate-600">
+        <hr class="grow border-t-[0.5px] border-slate-400 dark:border-slate-600">
       </div>
 
       <% last_message_date = object.created_at.to_date %>
