--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,11 +12,11 @@
           <p class="text-xs transition ease-in-out duration-200">Back to topics</p>
         </div>
       <% end %>
-      <button type="button" onclick="window.location.reload()" class=" ml-auto p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50">
+      <button type="button" onclick="window.location.reload()" class=" ml-auto p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50">
         <%= inline_svg_tag 'icons/reload.svg', class: 'size-4' %>
         <span class="sr-only">Refresh page</span>
       </button>
-      <%= link_to team_topic_path(@team, @topic), data: { turbo: false }, class: 'p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50' do %>
+      <%= link_to team_topic_path(@team, @topic), data: { turbo: false }, class: 'p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50' do %>
         <%= inline_svg_tag 'icons/info.svg', class: 'size-4' %>
         <span class="sr-only">View topic details</span>
       <% end %>
