--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -19,19 +19,19 @@
     <%= form.label :distance, 'How far did you run?', class: 'form-label' %>
 
     <div class="relative flex items-stretch mb-2">
-      <%= button_tag type: 'button', data: { action: 'mousedown->distance-shortcuts#updateDistance mousedown->form-validation#validateDistance mousedown->calculate-pace#update', update_distance_value: '-1' }, class: 'px-3 py-2 border border-slate-300 shadow-inner bg-white font-normal text-base placeholder:text-slate-500 block focus:outline-none focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-slate-700/30 dark:focus:border-indigo-700 dark:text-white dark:placeholder:text-slate-400 rounded-l-md active:scale-95 origin-right' do %>
+      <%= button_tag type: 'button', data: { action: 'mousedown->distance-shortcuts#updateDistance mousedown->form-validation#validateDistance mousedown->calculate-pace#update', update_distance_value: '-1' }, class: 'px-3 py-2 border border-slate-300 shadow-inner bg-white font-normal text-base placeholder:text-slate-500 block focus:outline-hidden focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-slate-700/30 dark:focus:border-indigo-700 dark:text-white dark:placeholder:text-slate-400 rounded-l-md active:scale-95 origin-right' do %>
         <%= inline_svg_tag 'icons/minus.svg', class: 'size-5 shrink-0' %>
         <span class="sr-only">Decrease by 1 mile</span>
       <% end %>
 
-      <%= form.number_field :distance, step: 0.1, min: 0, inputmode: 'numeric', placeholder: '0.0', class: 'z-10 px-3 pt-1 pb-4 border border-slate-300 shadow-inner bg-white font-normal text-base placeholder:text-slate-500 block w-full focus:outline-none focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-slate-700/30 dark:focus:border-indigo-700 dark:text-white dark:placeholder:text-slate-400 text-center', data: { form_validation_target: 'distance', action: 'input->form-validation#validateDistance input->calculate-pace#update', distance_shortcuts_target: 'distance', calculate_pace_target: 'distance' } %>
+      <%= form.number_field :distance, step: 0.1, min: 0, inputmode: 'numeric', placeholder: '0.0', class: 'z-10 px-3 pt-1 pb-4 border border-slate-300 shadow-inner bg-white font-normal text-base placeholder:text-slate-500 block w-full focus:outline-hidden focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-slate-700/30 dark:focus:border-indigo-700 dark:text-white dark:placeholder:text-slate-400 text-center', data: { form_validation_target: 'distance', action: 'input->form-validation#validateDistance input->calculate-pace#update', distance_shortcuts_target: 'distance', calculate_pace_target: 'distance' } %>
 
       <div class="z-10 absolute bottom-0.5 left-1/2 -translate-x-1/2 flex items-center text-xs text-soft gap-1">
         <%= inline_svg_tag 'icons/ruler.svg', class: 'size-3' %>
         <span>Miles</span>
       </div>
 
-      <%= button_tag type: 'button', data: { action: 'mousedown->distance-shortcuts#updateDistance mousedown->form-validation#validateDistance mousedown->calculate-pace#update', update_distance_value: '1' }, class: 'px-3 py-2 border border-slate-300 shadow-inner bg-white font-normal text-base placeholder:text-slate-500 block focus:outline-none focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-slate-700/30 dark:focus:border-indigo-700 dark:text-white dark:placeholder:text-slate-400 rounded-r-md active:scale-95 origin-left' do %>
+      <%= button_tag type: 'button', data: { action: 'mousedown->distance-shortcuts#updateDistance mousedown->form-validation#validateDistance mousedown->calculate-pace#update', update_distance_value: '1' }, class: 'px-3 py-2 border border-slate-300 shadow-inner bg-white font-normal text-base placeholder:text-slate-500 block focus:outline-hidden focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-slate-700/30 dark:focus:border-indigo-700 dark:text-white dark:placeholder:text-slate-400 rounded-r-md active:scale-95 origin-left' do %>
         <%= inline_svg_tag 'icons/plus.svg', class: 'size-5 shrink-0' %>
         <span class="sr-only">Increase by 1 mile</span>
       <% end %>
@@ -64,7 +64,7 @@
               <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-white/60 dark:bg-slate-800/60"></div>
 
               <!-- Gradient overlay for fading -->
-              <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-gradient-to-b from-white dark:from-slate-800 to-transparent"></div>
+              <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-linear-to-b from-white dark:from-slate-800 to-transparent"></div>
 
               <!-- Empty container for padding -->
               <div class="h-[60px]"></div>
@@ -81,7 +81,7 @@
               <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-white/60 dark:bg-slate-800/60"></div>
 
               <!-- Gradient overlay for fading -->
-              <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-gradient-to-t from-white dark:from-slate-800 to-transparent"></div>
+              <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-linear-to-t from-white dark:from-slate-800 to-transparent"></div>
             </div>
             <div class="grid place-items-center text-sm text-slate-800 dark:text-white font-semibold z-10 -ml-4.5 mr-auto pointer-events-none"><div>hour<span data-duration-picker-target="hourPlural" class="transition duration-[250ms] linear">s</span></div></div>
           </div>
@@ -93,7 +93,7 @@
               <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-white/60 dark:bg-slate-800/60"></div>
 
               <!-- Gradient overlay for fading -->
-              <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-gradient-to-b from-white dark:from-slate-800 to-transparent"></div>
+              <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-linear-to-b from-white dark:from-slate-800 to-transparent"></div>
 
               <!-- Empty container for padding -->
               <div class="h-[60px]"></div>
@@ -110,7 +110,7 @@
               <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-white/60 dark:bg-slate-800/60"></div>
 
               <!-- Gradient overlay for fading -->
-              <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-gradient-to-t from-white dark:from-slate-800 to-transparent"></div>
+              <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-linear-to-t from-white dark:from-slate-800 to-transparent"></div>
             </div>
             <div class="grid place-items-center text-sm text-slate-800 dark:text-white font-semibold z-10 -ml-4.5 mr-auto pointer-events-none">min</div>
           </div>
@@ -122,7 +122,7 @@
               <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-white/60 dark:bg-slate-800/60"></div>
 
               <!-- Gradient overlay for fading -->
-              <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-gradient-to-b from-white dark:from-slate-800 to-transparent"></div>
+              <div class="pointer-events-none sticky -top-2 z-20 h-[81px] w-full bg-linear-to-b from-white dark:from-slate-800 to-transparent"></div>
 
               <!-- Empty container for padding -->
               <div class="h-[60px]"></div>
@@ -139,7 +139,7 @@
               <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-white/60 dark:bg-slate-800/60"></div>
 
               <!-- Gradient overlay for fading -->
-              <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-gradient-to-t from-white dark:from-slate-800 to-transparent"></div>
+              <div class="pointer-events-none sticky -bottom-2 z-20 h-[81px] w-full bg-linear-to-t from-white dark:from-slate-800 to-transparent"></div>
             </div>
             <div class="grid place-items-center text-sm text-slate-800 dark:text-white font-semibold z-10 -ml-4.5 mr-auto pointer-events-none">sec</div>
           </div>
