--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -7,7 +7,7 @@
   <div class="card">
     <div class="mb-4">
       <div class="flex flex-wrap items-start justify-between gap-2">
-        <%= link_to team ? team_member_path(team, run_user) : user_path(run_user), data: { turbo: false }, class: 'group flex items-center gap-3 flex-grow' do %>
+        <%= link_to team ? team_member_path(team, run_user) : user_path(run_user), data: { turbo: false }, class: 'group flex items-center gap-3 grow' do %>
           <div class="shrink-0">
             <%= render 'shared/user_photo', user: run_user, size: :xs, icon_background: :darker %>
           </div>
