--- a/app/views/teams/calendar/_event_form.html.erb
+++ b/app/views/teams/calendar/_event_form.html.erb
@@ -71,7 +71,7 @@
     <% end %>
 
     <div class="flex items-center gap-x-4">
-      <%= image_tag event.photo.attached? ? event.photo : '', class: "size-16 rounded-lg shadow-lg dark:shadow-none object-cover #{'hidden' unless event.photo.attached?}", data: { image_preview_target: 'output' } %>
+      <%= image_tag event.photo.attached? ? event.photo : '', class: "size-16 rounded-lg not-dark:shadow-lg object-cover #{'hidden' unless event.photo.attached?}", data: { image_preview_target: 'output' } %>
       <div class="space-y-2">
         <%= form.file_field :photo, accept: 'image/png, image/jpeg', class: 'form-file', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
         <button type="button" class="btn btn-transparent" data-image-preview-target="clearBtn" data-action="image-preview#clearUpload">Clear upload</button>
