--- a/app/views/teams/member/_calendar.html.erb
+++ b/app/views/teams/member/_calendar.html.erb
@@ -82,7 +82,7 @@
 
   <div class="grid grid-cols-1 md:grid-cols-2 [@media(min-width:1180px)]:grid-cols-3 gap-2 md:gap-3 [@media(min-width:1180px)]:gap-4">
     <% @date_range.group_by(&:beginning_of_month).each do |(month, dates)| %>
-      <div class="p-2 sm:p-3 rounded-xl bg-white dark:bg-slate-800/60 shadow-md dark:shadow-none border border-slate-200 dark:border-slate-700">
+      <div class="p-2 sm:p-3 rounded-xl bg-white dark:bg-slate-800/60 not-dark:shadow-md border border-slate-200 dark:border-slate-700">
         <h3 class="text-sm font-semibold text-light mb-2.5 max-sm:mt-1 max-sm:ml-1"><%= month.strftime('%B') %></h3>
         <div class="grid grid-cols-7 gap-[3px] text-sm">
           <!-- Week days -->
