--- a/app/views/topics/_main_chat_topic.html.erb
+++ b/app/views/topics/_main_chat_topic.html.erb
@@ -5,7 +5,7 @@
 
 <div class="flex items-center gap-2 grow mb-6 border-b border-slate-200 dark:border-slate-700">
   <%= link_to team_main_chat_path(team), data: { turbo: false }, class: 'group flex items-center gap-4 sm:gap-6 grow py-6' do %>
-    <div class="grid place-items-center size-12 rounded-lg bg-gradient-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-slate-800 shrink-0">
+    <div class="grid place-items-center size-12 rounded-lg bg-linear-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-slate-800 shrink-0">
       <%= inline_svg_tag "icons/chat.svg", class: 'size-6 text-light' %>
     </div>
 
@@ -32,7 +32,7 @@
     <% end %>
   <% end %>
 
-  <%= link_to team_topic_path(team, topic), data: { turbo: false }, class: 'p-2 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50' do %>
+  <%= link_to team_topic_path(team, topic), data: { turbo: false }, class: 'p-2 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50' do %>
     <%= inline_svg_tag 'icons/info.svg', class: 'size-4 shrink-0 text-slate-700 dark:text-slate-300' %>
     <span class="sr-only">View topic details</span>
   <% end %>
