--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -6,7 +6,7 @@
 <div class="flex items-center gap-2 group/container">
   <%= link_to team_topic_messages_path(team, topic), data: { turbo: false }, class: 'group/link flex items-center gap-3 sm:gap-4 grow py-2 group-first/container:pt-0 group-last/container:pb-0' do %>
 
-    <div class="grid place-items-center size-10 rounded-lg bg-gradient-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-slate-800 shrink-0">
+    <div class="grid place-items-center size-10 rounded-lg bg-linear-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-slate-800 shrink-0">
       <%= inline_svg_tag "icons/hashtag.svg", class: 'size-5 text-light' %>
     </div>
 
@@ -46,7 +46,7 @@
       <button
         type="button"
         data-action="mousedown->dropdown#toggle"
-        class="z-0 p-1 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50"
+        class="z-0 p-1 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50"
       >
         <%= inline_svg_tag 'icons/ellipsis-vertical.svg', class: 'size-5.5 shrink-0 text-slate-700 dark:text-slate-300' %>
         <span class="sr-only">Actions</span>
@@ -107,7 +107,7 @@
       </div>
     </div>
     <% else %>
-    <%= link_to team_topic_path(team, topic), data: { turbo: false }, class: 'p-2 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50' do %>
+    <%= link_to team_topic_path(team, topic), data: { turbo: false }, class: 'p-2 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50' do %>
       <%= inline_svg_tag 'icons/info.svg', class: 'size-4 shrink-0 text-slate-700 dark:text-slate-300' %>
       <span class="sr-only">View topic details</span>
     <% end %>
